finished crud for Customer, Supplier, Product and Transaction.

--- a/TransactionManagement.MVC/Views/Shared/_Layout.cshtml
+++ b/TransactionManagement.MVC/Views/Shared/_Layout.cshtml
@@ -30,6 +30,15 @@
                     {
                         <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
                     }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Transactions", "Index", "Transaction")</li>
+                    }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Suppliers", "Index", "Supplier")</li>
+                    }
+
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
