--- a/TransactionManagement.MVC/Views/Supplier/Create.cshtml
+++ b/TransactionManagement.MVC/Views/Supplier/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.Supplier
+﻿@model TransactionManagement.MVC.Models.SupplierModels.SupplierCreate
 
 @{
     ViewBag.Title = "Create";
@@ -6,12 +6,13 @@
 
 <h2>Create</h2>
 
+
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Supplier</h4>
+        <h4>SupplierCreate</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -81,3 +82,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
