--- a/TransactionManagement.MVC/Views/Supplier/Delete.cshtml
+++ b/TransactionManagement.MVC/Views/Supplier/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.Supplier
+﻿@model TransactionManagement.MVC.Models.SupplierModels.SupplierDetail
 
 @{
     ViewBag.Title = "Delete";
@@ -8,9 +8,17 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Supplier</h4>
+    <h4>SupplierDetail</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.SupplierId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SupplierId)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Company)
         </dt>
