--- a/TransactionManagement.MVC/Views/Supplier/Details.cshtml
+++ b/TransactionManagement.MVC/Views/Supplier/Details.cshtml
@@ -1,9 +1,23 @@
-﻿@model TransactionManagement.MVC.Models.Supplier
+﻿@model TransactionManagement.MVC.Models.SupplierModels.SupplierDetail
+
+@{
+    ViewBag.Title = "Details";
+}
+
+<h2>Details</h2>
 
 <div>
-    <h4>Supplier</h4>
+    <h4>SupplierDetail</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.SupplierId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SupplierId)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Company)
         </dt>
@@ -63,6 +77,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.SupplierId }) |
+    @Html.ActionLink("Edit", "Edit", new { id=Model.SupplierId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
