--- a/TransactionManagement.MVC/Views/Transaction/Delete.cshtml
+++ b/TransactionManagement.MVC/Views/Transaction/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.Transaction
+﻿@model TransactionManagement.MVC.Models.TransactionModels.TransactionDetail
 
 @{
     ViewBag.Title = "Delete";
@@ -8,15 +8,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Transaction</h4>
+    <h4>TransactionDetail</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.TransactionId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TransactionId)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.CustomerId)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.CustomerId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SupplierId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SupplierId)
         </dd>
 
         <dt>
@@ -44,11 +60,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TypeOfPayment)
+            @Html.DisplayNameFor(model => model.Quantity)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TypeOfPayment)
+            @Html.DisplayFor(model => model.Quantity)
         </dd>
 
         <dt>
