--- a/TransactionManagement.MVC/Views/Home/Index.cshtml
+++ b/TransactionManagement.MVC/Views/Home/Index.cshtml
@@ -22,8 +22,8 @@
         <p>@Html.ActionLink("Customers", "Index", "Customer", null, new { @class = "btn btn-primary btn-large" })</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
+        <h2>Suppliers</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("Suppliers", "Index", "Supplier", null, new { @class = "btn btn-primary btn-large" })</p>
     </div>
 </div>
