--- a/TransactionManagement.MVC/Views/Product/Index.cshtml
+++ b/TransactionManagement.MVC/Views/Product/Index.cshtml
@@ -35,9 +35,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Category)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsStarred)
-        </th>
+        @*<th>
+                @Html.DisplayNameFor(model => model.IsStarred)
+            </th>*@
         <th>
             @Html.DisplayNameFor(model => model.Price)
         </th>
@@ -86,27 +86,119 @@
 
 @section scripts {
     <script language="javascript" type="text/javascript">
-     $(document).ready(function () {
-         $("i[data-toggle='star']")
-             .css({ "cursor": "pointer" })
-             .click(function (e) {
-                 var target = $(e.target);
-                 var noteId = target.attr("data-id");
-                 var starSet = target.hasClass("glyphicon-star");
+        $(document).ready(function () {
+            $("i[data-toggle='star']")
+                .css({ "cursor": "pointer" })
+                .click(function (e) {
+                    var target = $(e.target);
+                    var noteId = target.attr("data-id");
+                    var starSet = target.hasClass("glyphicon-star");
 
-                 $.ajax({
-                     method: starSet ? "DELETE" : "PUT",
-                     url: "/api/note/" + noteId + "/star",
-                     data: null
-                 })
-                 .done(function (r) {
-                     target.removeClass();
-                     target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
-                 })
-                 .fail(function (r) {
-                     alert("Failed to change star status");
-                 });
-             });
-     });
+                    $.ajax({
+                        method: starSet ? "DELETE" : "PUT",
+                        url: "/api/note/" + noteId + "/star",
+                        data: null
+                    })
+                        .done(function (r) {
+                            target.removeClass();
+                            target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
+                        })
+                        .fail(function (r) {
+                            alert("Failed to change star status");
+                        });
+                });
+        });
     </script>
 }
+<div id="smart-button-container">
+    <div style="text-align: center;">
+        <div style="margin-bottom: 1.25rem;">
+            <p>Product & Price | Quantity</p>
+            <select id="item-options"><option value="Winter Coat" price="200">Winter Coat - 200 USD</option><option value="Board  Shorts" price="50">Board  Shorts - 50 USD</option><option value="Flannel Shirt" price="32">Flannel Shirt - 32 USD</option><option value="Rain Coat" price="54">Rain Coat - 54 USD</option></select>
+            <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
+        </div>
+        <div id="paypal-button-container"></div>
+    </div>
+</div>
+<script src="https://www.paypal.com/sdk/js?client-id=AURdGdEIxP1kWLz69El_edzFBslS7GxlUe6G8aknDvjtD6FUuW6O9PY1v1WOxVtmMBTYGyZHj1inJKnF&currency=USD" data-sdk-integration-source="button-factory"></script>
+<script>
+    function initPayPalButton() {
+        var shipping = 4.99;
+        var itemOptions = document.querySelector("#smart-button-container #item-options");
+        var quantity = parseInt(10);
+        var quantitySelect = document.querySelector("#smart-button-container #quantitySelect");
+        if (!isNaN(quantity)) {
+            quantitySelect.style.visibility = "visible";
+        }
+        var orderDescription = 'Product & Price | Quantity';
+        if (orderDescription === '') {
+            orderDescription = 'Item';
+        }
+        paypal.Buttons({
+            style: {
+                shape: 'rect',
+                color: 'gold',
+                layout: 'vertical',
+                label: 'buynow',
+
+            },
+            createOrder: function (data, actions) {
+                var selectedItemDescription = itemOptions.options[itemOptions.selectedIndex].value;
+                var selectedItemPrice = parseFloat(itemOptions.options[itemOptions.selectedIndex].getAttribute("price"));
+                var tax = (9 === 0) ? 0 : (selectedItemPrice * (parseFloat(9) / 100));
+                if (quantitySelect.options.length > 0) {
+                    quantity = parseInt(quantitySelect.options[quantitySelect.selectedIndex].value);
+                } else {
+                    quantity = 1;
+                }
+
+                tax *= quantity;
+                tax = Math.round(tax * 100) / 100;
+                var priceTotal = quantity * selectedItemPrice + parseFloat(shipping) + tax;
+                priceTotal = Math.round(priceTotal * 100) / 100;
+                var itemTotalValue = Math.round((selectedItemPrice * quantity) * 100) / 100;
+
+                return actions.order.create({
+                    purchase_units: [{
+                        description: orderDescription,
+                        amount: {
+                            currency_code: 'USD',
+                            value: priceTotal,
+                            breakdown: {
+                                item_total: {
+                                    currency_code: 'USD',
+                                    value: itemTotalValue,
+                                },
+                                shipping: {
+                                    currency_code: 'USD',
+                                    value: shipping,
+                                },
+                                tax_total: {
+                                    currency_code: 'USD',
+                                    value: tax,
+                                }
+                            }
+                        },
+                        items: [{
+                            name: selectedItemDescription,
+                            unit_amount: {
+                                currency_code: 'USD',
+                                value: selectedItemPrice,
+                            },
+                            quantity: quantity
+                        }]
+                    }]
+                });
+            },
+            onApprove: function (data, actions) {
+                return actions.order.capture().then(function (details) {
+                    alert('Transaction completed by ' + details.payer.name.given_name + '!');
+                });
+            },
+            onError: function (err) {
+                console.log(err);
+            },
+        }).render('#paypal-button-container');
+    }
+    initPayPalButton();
+</script>
