--- a/TransactionManagement.MVC/Views/Transaction/Create.cshtml
+++ b/TransactionManagement.MVC/Views/Transaction/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.CustomerModels.TransactionCreate
+﻿@model TransactionManagement.MVC.Models.TransactionModels.TransactionCreate
 
 @{
     ViewBag.Title = "Create";
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>TransactionCreate</h4>
         <hr />
@@ -86,3 +86,40 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<div id="smart-button-container">
+    <div style="text-align: center;">
+        <div id="paypal-button-container"></div>
+    </div>
+</div>
+<script src="https://www.paypal.com/sdk/js?client-id=AURdGdEIxP1kWLz69El_edzFBslS7GxlUe6G8aknDvjtD6FUuW6O9PY1v1WOxVtmMBTYGyZHj1inJKnF&currency=USD" data-sdk-integration-source="button-factory"></script>
+<script>
+    function initPayPalButton() {
+      paypal.Buttons({
+        style: {
+          shape: 'rect',
+          color: 'gold',
+          layout: 'vertical',
+          label: 'buynow',
+
+        },
+
+        createOrder: function(data, actions) {
+          return actions.order.create({
+            purchase_units: [{"description":"Product","amount":{"currency_code":"USD","value":1.09,"breakdown":{"item_total":{"currency_code":"USD","value":1},"shipping":{"currency_code":"USD","value":0},"tax_total":{"currency_code":"USD","value":0.09}}}}]
+          });
+        },
+
+        onApprove: function(data, actions) {
+          return actions.order.capture().then(function(details) {
+            alert('Transaction completed by ' + details.payer.name.given_name + '!');
+          });
+        },
+
+        onError: function(err) {
+          console.log(err);
+        }
+      }).render('#paypal-button-container');
+    }
+    initPayPalButton();
+</script>
