carousel and payment

--- a/TransactionManagement.MVC/Views/Home/Index.cshtml
+++ b/TransactionManagement.MVC/Views/Home/Index.cshtml
@@ -2,9 +2,53 @@
     ViewBag.Title = "Home Page";
 }
 
+
+
+<!-- Carousel Start -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+
+            <div id="carousel" class="carousel slide" data-interval="4000" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel" data-slide-to="1"></li>
+                    <li data-target="#carousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="~/Content/Assets/PayPal.png" class="img-responsive" />
+                        <div class="carousel-caption">
+                            <h1>This is image 1</h1>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="~/Content/Assets/CustomerText.png" class="img-responsive" />
+                        <div class="carousel-caption">
+                            <h1>This is image 2</h1>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="~/Content/Assets/Cloud.png" class="img-responsive" />
+                        <div class="carousel-caption">
+                            <h1>This is image 3</h1>
+                        </div>
+                    </div>
+                </div>
+                <a href="#carousel" class="carousel-control left" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a href="#carousel" class="carousel-control right" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>FREE 30-DAY TRIAL</h1>
+    <p class="lead">Suppliers sign-up today for a risk free 30-day trial!</p>
     <p>@Html.ActionLink("Learn More About Us", "About")</p>
 </div>
 
