--- a/TransactionManagement.MVC/Views/Product/Details.cshtml
+++ b/TransactionManagement.MVC/Views/Product/Details.cshtml
@@ -58,9 +58,20 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+
+        <dd>
+            <img src="/Product/RetrieveImage/@Model.ProductId" alt="" height=200 width=300
+                 </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProductId }) |
+    @if (User.Identity.IsAuthenticated)
+    {
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ProductId })
+    }
     @Html.ActionLink("Back to List", "Index")
 </p>
