--- a/TransactionManagement.MVC/Views/Product/Edit.cshtml
+++ b/TransactionManagement.MVC/Views/Product/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Product", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -62,6 +62,14 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <input type="file" name="ImageData" id="ImageData" onchange="fileCheck(this);"/>
+            @*@Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })*@
         </div>
     </div>
 
