--- a/TransactionManagement.MVC/Views/Transaction/Create.cshtml
+++ b/TransactionManagement.MVC/Views/Transaction/Create.cshtml
@@ -18,7 +18,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CustomerId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CustomerId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("CustomerId", (IEnumerable<SelectListItem>)ViewBag.Customers, htmlAttributes: new { @class = "form-control" })
+
                 @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -26,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SupplierId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SupplierId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("SupplierId", (IEnumerable<SelectListItem>)ViewBag.Suppliers, htmlAttributes: new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.SupplierId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,7 +35,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("ProductId", (IEnumerable<SelectListItem>)ViewBag.Products, htmlAttributes: new { @class = "form-control" })
+
                 @Html.ValidationMessageFor(model => model.ProductId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,7 +45,7 @@
             @Html.LabelFor(model => model.DatePlaced, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DatePlaced, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DatePlaced, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.DatePlaced, "DateTime.Now", new { @class = "text-danger" })
             </div>
         </div>
 
