--- a/TransactionManagement.MVC/Views/Product/Index.cshtml
+++ b/TransactionManagement.MVC/Views/Product/Index.cshtml
@@ -24,6 +24,18 @@
     </div>
 }
 
+<ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#First">First</a></li>
+    <li><a data-toggle="tab" href="#Second">Second</a></li>
+    <li>@Html.ActionLink("Suppliers", "Index", "Supplier")</li>
+</ul>
+
+<div class="tab-content">
+    <div id="First" class="tab-pane fade in active">First</div>
+    <div id="Second" class="tab-pane fade">Second</div>
+    <div id="Third" class="tab-pane fade">Third</div>
+</div>
+
 <div class="row corkboard">
     @foreach (var item in Model)
     {
@@ -42,14 +54,56 @@
                         }
                     </div>
                     <div class="product-body">
-                        <div class="product-image">
-                            <img src="/Product/RetrieveImage/@item.ProductId" alt="" height="135" width="240" />
+                        <div class="product-image col-md-12">
+
+                            <!-- Carousel Start -->
+                            @*<div class="container">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div id="carousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+                                            <ol class="carousel-indicators">
+                                                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                                                <li data-target="#carousel" data-slide-to="1"></li>
+                                                <li data-target="#carousel" data-slide-to="2"></li>
+                                            </ol>
+                                            <div class="carousel-inner">
+                                                <div class="item active">
+                                                    <img src="/Product/RetrieveImage/@item.ProductId" alt="" height="135" width="240" class="img-responsive" />
+                                                    <div class="carousel-caption">
+                                                        <h1></h1>
+                                                    </div>
+                                                </div>
+                                                <div class="item">
+                                                    <img src="~/Content/Assets/CustomerText.png" class="img-responsive" />
+                                                    <div class="carousel-caption">
+                                                        <h1></h1>
+                                                    </div>
+                                                </div>
+                                                <div class="item">
+                                                    <img src="~/Content/Assets/Cloud.png" class="img-responsive" />
+                                                    <div class="carousel-caption">
+                                                        <h1></h1>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="#carousel" class="carousel-control left" data-slide="prev">
+                                                <span class="glyphicon glyphicon-chevron-left"></span>
+                                            </a>
+                                            <a href="#carousel" class="carousel-control right" data-slide="next">
+                                                <span class="glyphicon glyphicon-chevron-right"></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>*@
+                            <!-- Carousel End -->
+                            <img src="/Product/RetrieveImage/@item.ProductId" alt="" class="center" style="width:128px;height:128px/>
                         </div>
                         <div class="product-info">
                             @Html.DisplayFor(modelItem => item.Category)
-                            @Html.DisplayFor(modelItem => item.SupplierId)
                             @if (User.Identity.IsAuthenticated)
                             {
+                                @Html.DisplayFor(modelItem => item.SupplierId)
                                 @Html.DisplayFor(modelItem => item.InventoryCount)
                             }
                             @Html.DisplayFor(modelItem => item.Notes)
