--- a/Joshify/Views/Account/Register.cshtml
+++ b/Joshify/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.RegisterViewModel
+﻿@model Joshify.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
