--- a/Joshify/Views/Account/ResetPassword.cshtml
+++ b/Joshify/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.ResetPasswordViewModel
+﻿@model Joshify.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
