--- a/Joshify/Views/Account/SendCode.cshtml
+++ b/Joshify/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.SendCodeViewModel
+﻿@model Joshify.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
