--- a/Joshify/Views/Account/VerifyCode.cshtml
+++ b/Joshify/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.VerifyCodeViewModel
+﻿@model Joshify.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
