--- a/Joshify/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Joshify/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.ExternalLoginConfirmationViewModel
+﻿@model Joshify.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
