--- a/Joshify/Views/Account/ForgotPassword.cshtml
+++ b/Joshify/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.ForgotPasswordViewModel
+﻿@model Joshify.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
