--- a/Joshify/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Joshify/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransactionManagement.MVC.Models.ExternalLoginListViewModel
+﻿@model Joshify.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
