--- a/Joshify/Views/Home/About.cshtml
+++ b/Joshify/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
+<h2>Joshify</h2>
+</br>
+</br>
 <p>This API was created by Josh Piersimoni as a project for EFA Coding Bootcamp.</p>
+</br>
+<a href="https://mail.google.com/mail/?view=cm&source=mailto&to=[joshpiersimoni@gmail.com]"
+   target="blank">Contact me at joshpiersimoni@gmail.com</a>
