--- a/Joshify/Views/Shared/_Layout.cshtml
+++ b/Joshify/Views/Shared/_Layout.cshtml
@@ -40,7 +40,6 @@
                     }
 
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -52,7 +51,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year Josh Piersimoni</p>
+            <p>&copy;Josh Piersimoni @DateTime.Now.Year</p>
         </footer>
     </div>
 
