--- a/Joshify/Views/Supplier/Index.cshtml
+++ b/Joshify/Views/Supplier/Index.cshtml
@@ -21,7 +21,7 @@
     </div>
 }
 
-<ul class="nav nav-tabs">
+@*<ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#First">First</a></li>
     <li><a data-toggle="tab" href="#Second">Second</a></li>
     <li>@Html.ActionLink("Suppliers", "Index", "Supplier")</li>
@@ -31,7 +31,7 @@
     <div id="First" class="tab-pane fade in active">First</div>
     <div id="Second" class="tab-pane fade">Second</div>
     <div id="Third" class="tab-pane fade">Third</div>
-</div>
+</div>*@
 
 <div class="row">
     @foreach (var item in Model)
